[package]
name = "douyucheckin"
version = "0.1.0"
authors = ["tongyu <mycraftmw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
reqwest = { version = "0.10", features = ["json","cookies"] }
serde = { version = "1.0"}
serde_json = { version = "1.0"}
tokio = { version = "0.2", features = ["full"] }
